--- a/catalogue.html
+++ b/catalogue.html
@@ -7,6 +7,33 @@
 
     <title>Nutritional Catalogue — Overview</title>
 
+    <!-- SEO -->
+    <meta name="description"
+        content="Prototype directory cataloguing ready-to-use therapeutic foods (RUTF) for severe acute malnutrition. A testing platform to support research, humanitarian action, and policy development.">
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="International Directory of Ready-to-Use Therapeutic Foods">
+    <meta property="og:description"
+        content="A prototype reference tool cataloguing ready-to-use therapeutic foods (RUTF) used in the prevention and treatment of severe acute malnutrition.">
+    <meta property="og:url" content="https://l-salvaterra.netlify.app/catalogue.html">
+    <meta property="og:image" content="https://l-salvaterra.netlify.app/media/icons/temp-logo.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="International Directory of Ready-to-Use Therapeutic Foods">
+    <meta name="twitter:description"
+        content="Prototype directory of ready-to-use therapeutic foods (RUTF) to support researchers, humanitarian actors, and policymakers.">
+    <meta name="twitter:image" content="https://l-salvaterra.netlify.app/media/icons/temp-logo.png">
+
+    <!-- Optional -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Your Organization Name">
+
+
+
+
+
     <!-- jQuery + DataTables + Responsive + Buttons -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
